--- a/src/app.css
+++ b/src/app.css
@@ -34,11 +34,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
 }
 
 .debug {
-  outline: 3px solid red;
+  outline: 1px solid red;
 }
 
 body {
